// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the Matrix component 1`] = `
<div>
  <div
    class="title"
  >
    Global
  </div>
  <div
    class="matrix"
  >
    <div
      class="row"
    >
      <div>
        global.articles
      </div>
      <div>
        <div
          class="item"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <div
          class="item"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <span
          class="rowButton"
        >
          Activate all
        </span>
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        global.redirects
      </div>
      <div>
        <div
          class="item"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <span
          class="rowButton"
        >
          Activate all
        </span>
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        global.settings
      </div>
      <div>
        <div
          class="item"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <span
          class="rowButton"
        >
          Activate all
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render the Matrix component with values 1`] = `
<div>
  <div
    class="title"
  >
    Global
  </div>
  <div
    class="matrix"
  >
    <div
      class="row"
    >
      <div>
        global.articles
      </div>
      <div>
        <div
          class="item selected"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <div
          class="item"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <span
          class="rowButton"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        global.redirects
      </div>
      <div>
        <div
          class="item selected"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <span
          class="rowButton"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        global.settings
      </div>
      <div>
        <div
          class="item selected"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <span
          class="rowButton"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Render the Matrix component with values 2`] = `
<div>
  <div
    class="title"
  >
    Global
  </div>
  <div
    class="matrix"
  >
    <div
      class="row"
    >
      <div>
        global.articles
      </div>
      <div>
        <div
          class="item selected"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <div
          class="item"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <span
          class="rowButton"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        global.redirects
      </div>
      <div>
        <div
          class="item selected"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <span
          class="rowButton"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        global.settings
      </div>
      <div>
        <div
          class="item selected"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <span
          class="rowButton"
        />
      </div>
    </div>
  </div>
</div>
`;
